Closed
Bug 1893595
Opened 1 year ago
Closed 1 year ago
[loong64] non262/String/ropes.js test failed with debug build js shell on LoongArch64 machine
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
127 Branch
| Tracking | Status | |
|---|---|---|
| firefox127 | --- | fixed |
People
(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:125.0) Gecko/20100101 Firefox/125.0
Steps to reproduce:
-
Build js shell for LoongArch64 with
--enable-debug -
Test
non262/String/ropes.js:
./mach jstests non262/String/ropes.js --tbpl
Actual results:
non262/String/ropes.js failed if --ion-eager is enabled:
trace trap obj-js-dbg-loong64/dist/bin/js --ion-eager --ion-offthread-compile=off
Expected results:
The test passes.
| Assignee | ||
Updated•1 year ago
|
Blocks: sm-loong-arch64
Hardware: Unspecified → Other
| Assignee | ||
Updated•1 year ago
|
Mentor: zhaojiazhong-hf
| Assignee | ||
Updated•1 year ago
|
Mentor: zhaojiazhong-hf
| Assignee | ||
Comment 1•1 year ago
|
||
The MEffectiveAddress is only used for 32-bit inputs and outputs.
Updated•1 year ago
|
Assignee: nobody → zhaojiazhong-hf
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by jdemooij@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e461f60b71d5
[loong64] Fix LEffectiveAddress on LoongArch64. r=jandem
Comment 3•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox127:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•