Bug 1893595 - [loong64] Fix LEffectiveAddress on LoongArch64. r=jandem

The MEffectiveAddress is only used for 32-bit inputs and outputs, while
'computeEffectiveAddress' can only handle 64-bit values.

Differential Revision: https://phabricator.services.mozilla.com/D208725